--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,10 @@
-$mg-color-primary: #ec6707;
-$mg-color-secondary: #08205c;
+$mg-color-primary: #e95713;
+$mg-color-secondary: #003674;
 
 $mg-color-danger: #dc3545;
-$mg-color-warning: #ec6707;
+$mg-color-warning: #e95713;
 $mg-color-info: #017ffd;
 
 $mg-navbar-style: 'light';
+
+$body-color: #3c3c3d
