WIP: First version of Login button

--- a/src/assets/scss/bbmri.scss
+++ b/src/assets/scss/bbmri.scss
@@ -9,4 +9,10 @@ $theme-colors: (
 
 $body-color: #3c3c3d;
 
+$default-text-color: white;
+
 @import "node_modules/bootstrap/scss/bootstrap";
+
+.btn-primary {
+    color: white;
+}
