fix: restore centered text in negotiation list

--- a/src/assets/scss/bbmri.scss
+++ b/src/assets/scss/bbmri.scss
@@ -3,7 +3,7 @@ $theme-colors: (
     "secondary": #003674,
     "danger": #dc3545,
     "warning": #e95713,
-    "info": #017ffd,
+    "info": #3c3c3d,
     "light": #e7e7e7,
     "dark": #3c3c3d
 );
