feat: adds attachment button in NegotiationPost

--- a/src/assets/scss/bbmri.scss
+++ b/src/assets/scss/bbmri.scss
@@ -3,7 +3,7 @@ $theme-colors: (
     "secondary": #003674,
     "danger": #dc3545,
     "warning": #e95713,
-    "info": #3c3c3d,
+    "info": #7c7c7c,
     "light": #e7e7e7,
     "dark": #3c3c3d
 );
