redesign log-in and fix resizability

--- a/src/assets/scss/bbmri.scss
+++ b/src/assets/scss/bbmri.scss
@@ -5,7 +5,8 @@ $theme-colors: (
     "warning": #e95713,
     "info": #7c7c7c,
     "light": #e7e7e7,
-    "dark": #3c3c3d
+    "dark": #3c3c3d,
+    "logo-grey": #4d4d4f
 );
 
 $body-color: #3c3c3d;
