fix api call and refactor user page

--- a/src/assets/scss/bbmri.scss
+++ b/src/assets/scss/bbmri.scss
@@ -1,5 +1,6 @@
 $theme-colors: (
     "primary": #e95713,
+    "primary-light": #f37125,
     "secondary": #003674,
     "danger": #dc3545,
     "warning": #e95713,
