add theme variables

--- a/src/assets/scss/theme-eucaim.scss
+++ b/src/assets/scss/theme-eucaim.scss
@@ -6,11 +6,11 @@ $theme-colors: (
     "secondary-text": #416097,
     "login-tittle-text": #26336B,
 
-    "navbar-background": #e7e7e7,
-    "navbar-text": #26336B,
+    "navbar-background": #416097,
+    "navbar-text": #e7e7e7,
     "navbar-active-text": #81CDEE,
-    "navbar-welcome-text": #26336B,
-    "navbar-button-outline": #26336B,
+    "navbar-welcome-text": #e7e7e7,
+    "navbar-button-outline": #e7e7e7,
 
     "sort-filter-button-outline": #26336B,
     "sort-filter-dropdown-text": #26336B,
