add theme for eucaim

--- a/src/assets/scss/theme-bbmri.scss
+++ b/src/assets/scss/theme-bbmri.scss
@@ -17,6 +17,7 @@ $theme-colors: (
     "sort-filter-clear-button-outline": #dc3545,
 
     "search-results-text": #3c3c3d,
+    "new-request-button-color": #e95713,
     "display-view-button-color": #f37125,
 
     "card-title-text": #3c3c3d,
