--- a/src/assets/scss/theme-eucaim.scss
+++ b/src/assets/scss/theme-eucaim.scss
@@ -17,6 +17,7 @@ $theme-colors: (
     "sort-filter-clear-button-outline": #dc3545,
 
     "search-results-text": #26336B,
+    "new-request-button-color": #F18918,
     "display-view-button-color": #F18918,
 
     "card-title-text": #26336B,
